--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@vueuse/core": "^9.1.0",
     "dayjs": "^1.11.4",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
