--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@quasar/extras": "^1.0.0",
     "@vueuse/core": "^9.1.0",
     "dayjs": "^1.11.4",
+    "pinia": "^2.0.18",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
