--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^9.1.0",
     "dayjs": "^1.11.4",
     "pinia": "^2.0.18",
+    "pinia-plugin-persistedstate": "^2.1.1",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
