--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "index-test",
   "version": "0.0.1",
-  "description": "A Quasar Project",
+  "description": "A index of video scripts.",
   "productName": "Index test",
-  "author": "poengAlex <bbgruppen@outlook.com>",
+  "author": "handyAlexander <alexander@sweettech.no>",
   "private": true,
   "scripts": {
+	"build": "quasar build",
+    "start": "node server.js",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
     "importApiIndex": "rimraf src/_SCRIPTAPIINDEX && openapi --exportSchemas true --input https://scripts01.handyfeeling.com/api/script/index/v0/spec --output src/_SCRIPTAPIINDEX --name ScriptApiIndex --indent 4"
@@ -14,10 +16,13 @@
     "@ohdoki/handy-sdk": "^2.1.15",
     "@quasar/extras": "^1.0.0",
     "@vueuse/core": "^9.1.0",
+    "connect-history-api-fallback": "^2.0.0",
     "dayjs": "^1.11.4",
+    "express": "^4.18.1",
     "pinia": "^2.0.18",
     "pinia-plugin-persistedstate": "^2.1.1",
     "quasar": "^2.6.0",
+    "serve-static": "^1.15.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
